--- a/bosta_frontend/pubspec.yaml
+++ b/bosta_frontend/pubspec.yaml
@@ -39,11 +39,11 @@ dependencies:
   provider: ^6.0.5
   flutter_dotenv: ^6.0.0
   google_fonts: ^6.1.0
+  go_router: ^16.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
