--- a/bosta_frontend/pubspec.yaml
+++ b/bosta_frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   google_fonts: ^6.1.0
   go_router: ^16.3.0
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
