--- a/bosta_frontend/pubspec.yaml
+++ b/bosta_frontend/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   geolocator: ^11.0.0
   sliding_up_panel: ^2.0.0+1
   intl: ^0.19.0
+  mapbox_maps_flutter: ^0.5.1
+
 
 dev_dependencies:
   flutter_test:
