--- a/bosta_frontend/pubspec.yaml
+++ b/bosta_frontend/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   intl: ^0.19.0
   mapbox_maps_flutter: ^0.5.1
+  flutter_typeahead: ^5.2.0
 
 
 dev_dependencies:
