--- a/bosta_frontend/pubspec.yaml
+++ b/bosta_frontend/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   provider: ^6.1.2
   http: ^1.2.1
   google_fonts: ^6.2.1
-  flutter_map: ^6.1.0
+  flutter_map: ^6.1.0cd 
   latlong2: ^0.9.1
   geolocator: ^11.0.0
   sliding_up_panel: ^2.0.0+1
