--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==5.2.6
 djangorestframework>=3.13,<4
 django-cors-headers==4.0.0
-psycopg2-binary
+psycopg2-binary # For PostgreSQL
+gunicorn # Production WSGI server
+whitenoise # For serving static files
 
 # Optional for GIS support
 # psycopg2-binary is already listed; ensure GDAL/GEOS installed system-wide
